refactor: optimize log collection and parsing logic